# BullCapital

./: .env  .gitignore  API_MEMORY_README.md  DATABASE_SETUP_README.md  GET_VS_POST_REFACTORING.md  IMPLEMENTATION_SUMMARY.md  README.md  TICKER_DISCOVERY_API.md  bullcapital-465222-860597d260f3.json  create_tables.py  database.txt  docker-compose.yml  pyproject.toml  requirements.txt
backend/: .env  README.md  app.py  docker-compose.yml  pyproject.toml
backend/ai-service/: Dockerfile  pyproject.toml  requirements.txt  test_server.py
backend/ai-service/app/: api_agent.py  api_server.py  main.py  models.py
backend/ai-service/app/agent/: finance_core.py  financial_agent.py
backend/ai-service/app/core/: config.py  database.py  models.py
backend/ai-service/app/prompts/: multiplos_prompt.md  valuation_prompt.md
backend/ai-service/init-scripts/: 01_add_temporario_column.sql
backend/auth-service/: .env.example  Dockerfile  GOOGLE_OAUTH_SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt  test_database_connection.py  test_google_oauth.py
backend/auth-service/app/: app.py  main.py
backend/auth-service/app/api/: auth.py
backend/auth-service/app/core/: config.py  models.py  security.py
backend/auth-service/app/crud/: user.py
backend/auth-service/app/migrations/: add_google_oauth_support.py  convert_user_id_to_uuid.py
backend/auth-service/app/schemas/: user.py
backend/auth-service/app/services/: auth_service.py
backend/data-storage-service/: Dockerfile  main.py  pyproject.toml
backend/data-storage-service/models/: market_data.py  schemas.py
backend/data_storage_service/: Dockerfile
backend/gateway-service/: main.py  pyproject.toml  requirements.txt
backend/gateway-service/agent/: financial_agent.py
backend/gateway-service/models/: auth_models.py
backend/gateway-service/models/responses/: ai_financial_response.py  historical_data_point.py  market_data_response.py
backend/gateway-service/routers/: gateway_ai.py  gateway_auth.py  gateway_market_data.py
backend/instrument-service/: Dockerfile  pyproject.toml
backend/market-data-service/: API_IMPROVEMENTS_SUMMARY.md  Dockerfile  TESTING_GUIDE.md  interactive_tester.py  pyproject.toml  requirements.txt  test_service.py
backend/market-data-service/app/: frontend_api.py  main.py  yfinance_endpoints.py
backend/market-data-service/app/api/: market_data.py
backend/market-data-service/app/cadu/: yfinance_logic.py
backend/market-data-service/app/core/: config.py
backend/market-data-service/app/models/: market_data.py  requests.py  responses.py
backend/market-data-service/app/services/: market_data_service.py  yahoo_finance_provider.py
backend/market-data-service/app/utils/: validators.py
backend/market-download-service/: Dockerfile  main.py  pyproject.toml
backend/market_download_service/: Dockerfile
backend/models/: user.py
backend/routes/v1/: __init__.py  market_data.py
backend/services/: ticker_service.py
backend/services/instrument_service/: Dockerfile  main.py  pyproject.toml
backend/services/market_downlaod_service/: Dockerfile  pyproject.toml
backend/services/market_downlaod_service/services/: market_download.py
backend/src/: app.py  main.py
backend/src/orchestrator/: tickerOrchestrator.py
backend/src/routes/v1/: market_data.py
backend/src/services/: auth_service.py
backend/src/services/data_storage_service/: Dockerfile  main.py  pyproject.toml
backend/src/services/instrument_service/: main.py
backend/src/services/market_data_service/: Dockerfile  main.py  pyproject.toml
backend/src/services/market_data_service/services/: market_download.py
backend/src/services/market_data_service/tests/: download_test.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/features/ai-assistant/: convolist.tsx  message.tsx  messagesScroll.tsx  sidebar.tsx  sidebarfooter.tsx  sidebarheader.tsx
frontend/src/components/features/assets-chart/: asset-chart.tsx
frontend/src/components/features/highlights-overview/: highlights-card.tsx  highlights-dividend-card.tsx  highlights-overview.tsx  listskeleton.tsx
frontend/src/components/ui/: carousel.tsx  footer.tsx  header.tsx  loginform.tsx  loginmodal.tsx  logo.tsx  mode-toggle.tsx  path-link.tsx  question-mark.tsx  registerform.tsx  search-bar.tsx  skeleton.tsx  tooltip.tsx
frontend/src/data/: categoria-data.ts  indexes-data.ts
frontend/src/hooks/: useAIChat.ts  useaddparams.ts
frontend/src/hooks/queries/: queries-config.ts  useaichat.ts  usecategories.ts  usedividends.ts  usehealth.ts  usehistory.ts  usemarketoverview.ts  usenews.ts  useperformance.ts  usesearch.ts  useticker.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: asset.tsx  highlight.tsx  home.tsx  ranking.tsx
frontend/src/services/: ai-service.ts  api.ts  auth-service.ts  categories-service.ts  dividends-service.ts  health-service.ts  history-service.ts  marketoverview-service.ts  news-service.ts  performance-service.ts  search-service.ts  tickers-service.ts
frontend/src/types/: ai.ts  marketoverview.ts  news.ts  ticker.ts
ia/: pyproject.toml  relatorio_agenticRag.py
ia/Agent/: api_server.py  example_chat.py  financial_agent.py  test_api.py
ia/valuation/: Agno.py  agno.py  capm.py
src/: app.py  create_tables.py  main.py  test_connection.py
src/bullcapital_backend/: app.py  main.py
src/bullcapital_backend/modules/: instrumentProcess.py
src/bullcapital_backend/orchestrator/: tickerOrchestrator.py
src/controllers/: auth_controller.py
src/etl/: dataExtraction.py  instrumentProcess.py  tempCodeRunnerFile.py
src/middlewares/: auth_middleware.py  auth_middleware_memory.py
src/models/: database.py  schemas.py  user.py
src/modules/: dataExtraction.py  instrumentProcess.py
src/routes/: auth_routes.py  b3_data.py
src/routes/v1/: __init__.py  auth.py  market_data.py
src/services/: auth_service.py  auth_service_memory.py
src/services/instrument_service/: main.py  pyproject.toml  utils.py
(+6 files in other folders)
