# instrument_ingestion_service/pyproject.toml
[project]
name = "instrument-ingestion-service"
version = "0.1.0"
description = "Microsserviço para ingestão e padronização de dados de instrumentos B3."
authors = [{name = "Seu Nome", email = "seu.email@example.com"}]
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "fastapi",
    "uvicorn[standard]", # [standard] inclui dependências como httptools, que é bom para FastAPI
    "kafka-python",
    "python-multipart>=0.0.20",
    "yfinance>=0.2.65",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

