[project]
name = "market-data-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kafka>=1.3.5",
    "confluent-kafka",
    "pandas>=2.3.0",
    "python-json-logger>=3.3.0",
    "python-multipart>=0.0.20",
    "yfinance>=0.2.65",
]
